--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "torann/registry",
-    "description": "Laravel 4 registry manager for application configurations",
+    "description": "Laravel registry manager for application configurations",
     "keywords": ["registry", "laravel", "settings"],
 	"license": "BSD 2-Clause",
     "authors": [
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~4.1"
+        "illuminate/support": "~4.1|~5.0"
     },
     "autoload": {
         "classmap": [
