--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,16 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~4.1|~5.0"
+        "illuminate/support": "~5.0"
     },
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
-        "psr-0": {
-            "Torann\\Registry": "src/"
+        "psr-4": {
+            "Torann\\Registry\\": "src/Torann/Registry"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-master": "0.2-dev"
         }
     },
     "minimum-stability": "dev"
