--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "torann/registry",
     "description": "Laravel registry manager for application configurations",
-    "keywords": ["registry", "laravel", "settings"],
+    "keywords": ["registry", "laravel", "settings", "configuration"],
 	"license": "BSD 2-Clause",
     "authors": [
         {
